--- a/package.json
+++ b/package.json
@@ -1,12 +1,26 @@
 {
     "private": true,
     "scripts": {
-        "dev:server": "nodemon -x 'node --experimental-modules' server.mjs"
+        "build": "webpack --mode production",
+        "dev:client": "webpack --mode development --watch",
+        "dev:server": "nodemon -x 'node --experimental-modules' server.mjs",
+        "start": "node --experimental-modules' server.mjs"
     },
     "dependencies": {
         "express": "^4.16.3"
     },
     "devDependencies": {
-        "nodemon": "^1.17.3"
+        "babel-core": "^6.26.0",
+        "babel-loader": "^7.1.4",
+        "babel-preset-env": "^1.6.1",
+        "babel-preset-react": "^6.24.1",
+        "css-loader": "^0.28.11",
+        "html-webpack-plugin": "^3.2.0",
+        "nodemon": "^1.17.3",
+        "react": "^16.3.2",
+        "react-dom": "^16.3.2",
+        "style-loader": "^0.21.0",
+        "webpack": "^4.6.0",
+        "webpack-cli": "^2.0.14"
     }
 }
