--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "private": true,
     "scripts": {
         "build": "webpack --mode production",
+        "dev": "run-p dev:*",
         "dev:client": "webpack --mode development --watch",
         "dev:server": "nodemon -x 'node --experimental-modules' server.mjs",
         "start": "node --experimental-modules' server.mjs"
@@ -16,6 +17,7 @@
         "css-loader": "^0.28.11",
         "html-webpack-plugin": "^3.2.0",
         "nodemon": "^1.17.3",
+        "npm-run-all": "^4.1.2",
         "react": "^16.3.2",
         "react-dom": "^16.3.2",
         "style-loader": "^0.21.0",
